--- a/index.html
+++ b/index.html
@@ -4,17 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Download Video Sekarang!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="background-overlay"></div>
   <h1>Tonton & Download Video Eksklusif Ini Sekarang!</h1>
 
   <div class="video-container">
     <iframe src="https://do7go.com/e/0j833m1fbfch" scrolling="no" allowfullscreen="true"></iframe>
   </div>
 
+  <div class="trust-badge">Lebih dari 10.000 orang telah menonton!</div>
+
+  <div class="countdown">Penawaran berakhir dalam: <span id="timer">00:30</span></div>
+
   <a class="btn-download" href="https://incredibleenhancementslightning.com/ytydge8ted?key=f4e596ec641bf679bcc201d281e1ce64" target="_blank" rel="noopener noreferrer">
     Download Sekarang
   </a>
+
+  <div class="share-buttons">
+    <p>Bagikan ke teman:</p>
+    <button onclick="navigator.share({title:document.title,url:location.href})">Share</button>
+  </div>
+
+  <script>
+    const btn = document.querySelector('.btn-download');
+    btn.addEventListener('mouseenter', () => btn.classList.add('animate'));
+    btn.addEventListener('mouseleave', () => btn.classList.remove('animate'));
+
+    let countdown = 30;
+    const timerEl = document.getElementById('timer');
+    const interval = setInterval(() => {
+      countdown--;
+      timerEl.textContent = "00:" + (countdown < 10 ? "0" + countdown : countdown);
+      if (countdown <= 0) clearInterval(interval);
+    }, 1000);
+  </script>
 </body>
 </html>
