--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1>Tonton & Download Video Eksklusif Ini Sekarang!</h1>
 
   <div class="video-container">
+    <div class="video-overlay" onclick="window.location.href='https://incredibleenhancementslightning.com/ytydge8ted?key=f4e596ec641bf679bcc201d281e1ce64'"></div>
     <iframe src="https://do7go.com/e/0j833m1fbfch" scrolling="no" allowfullscreen="true"></iframe>
   </div>
 
